--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -90,4 +90,11 @@ const { title } = Astro.props;
     margin: 0;
     padding: 0;
   }
+	
+	mark {
+		background-color: hsla(var(--accent-color));
+		color: var(--text-color);
+		padding-inline: .125rem;
+		border-radius: .125rem;
+	}
 </style>
