--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,9 +5,9 @@
               <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
           </svg>
       </span>
-      <h3 class="mb-1 text-lg font-semibold text-black">Industry Labs</h3>
-      <time class="block mb-2 text-sm font-normal leading-none text-black/70">Marzo 2024 - Actualmente</time>
-      <p class="text-base font-normal text-black">Actualmente trabajo en Industry Labs como desarrollador front-end para el <mark>desarrollo de una ERP</mark>.</p>
+      <h3 class="mb-1 text-lg font-semibold">Industry Labs</h3>
+      <time class="block mb-2 text-sm font-normal leading-none">Marzo 2024 - Actualmente</time>
+      <p class="text-base font-normal">Actualmente trabajo en Industry Labs como desarrollador front-end para el <mark>desarrollo de una ERP</mark>.</p>
   </li>
 
   <li class="mb-10 ms-6">
@@ -16,9 +16,9 @@
             <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
         </svg>
     </span>
-    <h3 class="mb-1 text-lg font-semibold text-black">Several.pro</h3>
-    <time class="block mb-2 text-sm font-normal leading-none text-black/70">Octubre 2023 - Enero 2024</time>
-    <p class="text-base font-normal text-black">Trabajé en Several el último trimestre de 2023, donde mis principales funciones fueron: <mark>maquetar páginas</mark> para diversas empresas con <mark>Wordpress</mark> utilizando los <mark>plugins Elementor y WPBakery</mark>, añadir y corregir bloques de la pagina principal de la empresa y <mark>mejorar el SEO de esta misma hasta un 50%</mark> mejorando la semántica del DOM, añadiendo scripts específicos de schema.org y creando meta descripciones coherentes para cada página.
+    <h3 class="mb-1 text-lg font-semibold">Several.pro</h3>
+    <time class="block mb-2 text-sm font-normal leading-none">Octubre 2023 - Enero 2024</time>
+    <p class="text-base font-normal">Trabajé en Several el último trimestre de 2023, donde mis principales funciones fueron: <mark>maquetar páginas</mark> para diversas empresas con <mark>Wordpress</mark> utilizando los <mark>plugins Elementor y WPBakery</mark>, añadir y corregir bloques de la pagina principal de la empresa y <mark>mejorar el SEO de esta misma hasta un 50%</mark> mejorando la semántica del DOM, añadiendo scripts específicos de schema.org y creando meta descripciones coherentes para cada página.
     </p>
 </li>
 </ol>
@@ -27,5 +27,12 @@
     p {
         font: var(--font-body);
         max-width: 100ch;
+        font-size: 1rem;
+        line-height: 1.5;
+    }
+
+    time {
+        font: var(--font-body);
+        color: hsla(var(--text-color));
     }
 </style>
