--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -76,7 +76,8 @@ const { title } = Astro.props;
 	a::selection,
 	mark::selection,
 	strong::selection,
-	em::selection {
+	em::selection,
+	time::selection {
 		background-color: hsla(var(--accent-color));
 	}
 
