--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,38 +1,72 @@
-<ol id="experience" class="relative border-s border-gray-200 dark:border-gray-700">                  
-  <li class="mb-10 ms-6">
-      <span class="absolute flex items-center justify-center w-6 h-6 rounded-full -start-3 ring-8 ring-[#ffd952]/20 bg-[#ffd952]/80">
-          <svg class="w-2.5 h-2.5 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-              <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-          </svg>
-      </span>
-      <h3 class="mb-1 text-lg font-semibold">Industry Labs</h3>
-      <time class="block mb-2 text-sm font-normal leading-none">Marzo 2024 - Actualmente</time>
-      <p class="text-base font-normal">Actualmente trabajo en Industry Labs como desarrollador front-end para el <mark>desarrollo de una ERP</mark>.</p>
-  </li>
+---
+import { type Experience } from '../types'
 
-  <li class="mb-10 ms-6">
-    <span class="absolute flex items-center justify-center w-6 h-6 rounded-full -start-3 ring-8 ring-[#ffd952]/20 bg-[#ffd952]/80">
-        <svg class="w-2.5 h-2.5 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-            <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-        </svg>
-    </span>
-    <h3 class="mb-1 text-lg font-semibold">Several.pro</h3>
-    <time class="block mb-2 text-sm font-normal leading-none">Octubre 2023 - Enero 2024</time>
-    <p class="text-base font-normal">Trabajé en Several el último trimestre de 2023, donde mis principales funciones fueron: <mark>maquetar páginas</mark> para diversas empresas con <mark>Wordpress</mark> utilizando los <mark>plugins Elementor y WPBakery</mark>, añadir y corregir bloques de la pagina principal de la empresa y <mark>mejorar el SEO de esta misma hasta un 50%</mark> mejorando la semántica del DOM, añadiendo scripts específicos de schema.org y creando meta descripciones coherentes para cada página.
-    </p>
-</li>
+interface Props {
+  experiences: Experience[]
+}
+
+const { experiences } = Astro.props
+---
+
+<ol>
+  {experiences.map(experience => (
+    <li>
+      <h3>{ experience.company }</h3>
+      <time>{ experience.time }</time>
+      <p>{ experience.description.map((description, i) => {
+        if (i % 2 === 0) return description
+        return <mark>{ description }</mark>
+      }) }</p>
+    </li>
+  ))}
 </ol>
 
 <style>
-    p {
-        font: var(--font-body);
-        max-width: 100ch;
-        font-size: 1rem;
-        line-height: 1.5;
-    }
+  ol {
+    border-left: 1px solid hsla(var(--text-color) / 30%);
+    padding-left: 1rem;
+    padding-block: .5rem;
+    gap: 1.5rem;
+    display: flex;
+    flex-direction: column;
+  }
 
-    time {
-        font: var(--font-body);
-        color: hsla(var(--text-color));
-    }
+  ol h3 {
+    font: var(--font-title);
+    position: relative;
+    font-size: 1.125rem;
+    font-weight: 600;
+  }
+
+  ol h3::before {
+    content: '';
+    position: absolute;
+    left: -1.55rem;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1.2rem;
+    height: 1.2rem;
+    background: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7.50009 0.877014C3.84241 0.877014 0.877258 3.84216 0.877258 7.49984C0.877258 11.1575 3.8424 14.1227 7.50009 14.1227C11.1578 14.1227 14.1229 11.1575 14.1229 7.49984C14.1229 3.84216 11.1577 0.877014 7.50009 0.877014ZM1.82726 7.49984C1.82726 4.36683 4.36708 1.82701 7.50009 1.82701C10.6331 1.82701 13.1729 4.36683 13.1729 7.49984C13.1729 10.6328 10.6331 13.1727 7.50009 13.1727C4.36708 13.1727 1.82726 10.6328 1.82726 7.49984ZM8 4.50001C8 4.22387 7.77614 4.00001 7.5 4.00001C7.22386 4.00001 7 4.22387 7 4.50001V7.50001C7 7.63262 7.05268 7.7598 7.14645 7.85357L9.14645 9.85357C9.34171 10.0488 9.65829 10.0488 9.85355 9.85357C10.0488 9.65831 10.0488 9.34172 9.85355 9.14646L8 7.29291V4.50001Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>') white;
+    background-repeat: no-repeat;
+  }
+
+  ol time {
+    font: var(--font-body);
+    font-size: .75rem;
+    padding: .125rem .325rem;
+    border-radius: .25rem;
+    background-color: rgba(0, 0, 0, .05);
+    
+    display: flex;
+    width: max-content;
+    margin-bottom: .625rem;
+    margin-top: .25rem;
+  }
+
+  ol p {
+    font: var(--font-body);
+    font-size: .925rem;
+    line-height: 1.5;
+    max-width: 100ch;
+  }
 </style>
