--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,255 +1,1 @@
----
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import WorkingBadge from '../components/WorkingBadge.astro';
-import Project from '../components/Project.astro';
-import RRSSList from '../components/RRSSList.svelte';
-
-import { WORKING_TIME } from '../constants';
-import Experience from '../components/Experience.astro';
----
-
-<Layout title="Welcome to Astro.">
-	<Header />
-	<main>
-		<section id="hero">
-			<section>
-				<div>
-					<h1>Pol Cortés</h1>
-					<span>Desarrollador Frontend - { WORKING_TIME() }</span>
-					<p>Apasionado por la <mark>UX</mark> y el <mark>SEO</mark>.</p>
-					<p>Experiencia en <mark>agencia de diseño</mark> y desarrollo de una <mark>ERP</mark>.</p>
-					<div>
-						<WorkingBadge />
-						―
-						<RRSSList client:load />
-					</div>
-				</div>
-				<img src="https://pol-cortes.netlify.app/imgs/mi_foto.webp" alt="Yo">
-			</section>
-		</section>
-
-		<section id="experiencia">
-			<h2>Experiencia</h2>
-
-			<Experience />
-		</section>
-
-		<section id="proyectos">
-			<h2>Proyectos</h2>
-			<section>
-				<!-- title, description, link, linkTitle, github, img, imgAlt, imgTitle, techs -->
-				<Project 
-					title="F5 Futsal" 
-					description="Landing sencilla hecha con Wordpress y Elementor." 
-					link="https://f5futsal.com/" 
-					linkTitle="Enlace a la landing de F5 Futsal" 
-					github={ null } 
-					img="https://pol-cortes.netlify.app/imgs/projects/f5futsal.webp" 
-					imgAlt="Foto de la landing de F5 Futsal" 
-					imgTitle="Landing F5 Futsal" 
-					techs={[ "HTML5", "CSS3", "JavaScript", "JQuery", "PHP", "WordPress", "Elementor" ]}
-				/>
-
-				<Project 
-					title="F5 Futsal" 
-					description="Landing sencilla hecha con Wordpress y Elementor." 
-					link="https://f5futsal.com/" 
-					linkTitle="Enlace a la landing de F5 Futsal" 
-					github={ null } 
-					img="https://pol-cortes.netlify.app/imgs/projects/f5futsal.webp" 
-					imgAlt="Foto de la landing de F5 Futsal" 
-					imgTitle="Landing F5 Futsal" 
-					techs={[ "HTML5", "CSS3", "JavaScript", "JQuery", "PHP", "WordPress", "Elementor" ]}
-				/>
-			</section>
-		</section>
-
-		<footer id="footer">
-			<p>Porfolio hecho con Astro y Svelte.</p>
-			<ul>
-				<li>
-					<a href="https://www.linkedin.com/in/pol-cort%C3%A9s-757b69285/" target="_blank" rel="noopener noreferrer">Linkedin</a>
-				</li>
-				<li>
-					·
-				</li>
-				<li>
-					<a href="https://www.github.com/polcortes/porfolio" target="_blank" rel="noopener noreferrer">Repo</a>
-				</li>
-			</ul>
-		</footer>
-	</main>
-</Layout>
-
-<style>
-	main {
-		position: relative;
-		padding: 0rem 2rem 1rem;
-		min-height: 100dvh;
-		scrollbar-gutter: stable;
-		width: 1440px;
-		max-width: 1440px;
-
-		transition: width .15s linear;
-	}
-
-	#hero {
-		padding-block: 3rem 6.25rem;
-	}
-
-	#hero > section:first-of-type {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-    gap: 12rem;
-	}
-	
-	#hero section:first-of-type div span {
-		font-weight: 400;
-		font: var(--font-subtitle);
-		font-size: 1rem;
-		padding-left: .2rem;
-		padding-top: .5rem;
-		display: block;
-	}
-
-	#hero section:first-of-type div p {
-		font-weight: 400;
-		font: var(--font-body);
-		font-size: 1.125rem;
-		padding-left: .2rem;
-		/* margin-bottom: .25rem; */
-		margin-top: .75rem;
-		line-height: 1.5;
-	}
-
-	#hero section:first-of-type div p:last-of-type {
-		margin-top: 0;
-		margin-bottom: .5rem;
-	}
-
-	#hero section:first-of-type div > div {
-		display: flex;
-		align-items: center;
-		gap: 1rem;
-	}
-
-	h1 {
-		font-size: 4.125rem;
-		font-weight: 800;
-		margin: 0;
-		background-color: hsla(var(--accent-color));
-		color: var(--text-color);
-		padding-inline: .125rem;
-		border-radius: .125rem;
-		width: max-content;
-	}
-
-	#hero img {
-		width: 20rem;
-		height: auto;
-		border-radius: 50%;
-	}
-
-	h2 {
-		font: var(--font-title);
-		font-size: 2.5rem;
-		font-weight: 800;
-		margin: 0;
-		padding-bottom: 1rem;
-		margin-bottom: 1.5rem;
-		position: relative;
-	}
-
-	h2::after {
-		content: '';
-		display: block;
-		width: 300px;
-		background:
-		url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1418 125" fill="hsl(47 100% 66%)"><path d="M1412.29 72.17c-11.04-5.78-20.07-14.33-85.46-25.24-22.37-3.63-44.69-7.56-67.07-11.04-167.11-22.06-181.65-21.24-304.94-30.56C888.78 1.39 822.57 1.1 756.44 0c-46.63-.11-93.27 1.56-139.89 2.5C365.5 13.55 452.86 7.68 277.94 23.15 202.57 33.32 127.38 45.01 52.07 55.69c-11.23 2.41-22.63 4.17-33.71 7.22C6.1 66.33 5.64 66.19 3.89 67.79c-7.99 5.78-2.98 20.14 8.72 17.5 33.99-9.47 32.28-8.57 178.06-29.66 4.26 4.48 7.29 3.38 18.42 3.11 13.19-.32 26.38-.53 39.56-1.12 53.51-3.81 106.88-9.62 160.36-13.95 18.41-1.3 36.8-3.12 55.21-4.7 23.21-1.16 46.43-2.29 69.65-3.4 120.28-2.16 85.46-3.13 234.65-1.52 23.42.99 1.57-.18 125.72 6.9 96.61 8.88 200.92 27.94 295.42 46.12 40.87 7.91 116.67 23.2 156.31 36.78 3.81 1.05 8.28-.27 10.51-3.58 3.17-3.72 2.66-9.7-.78-13.13-3.25-3.12-8.14-3.44-12.18-5.08-17.89-5.85-44.19-12.09-63.67-16.56l26.16 3.28c23.02 3.13 46.28 3.92 69.34 6.75 10.8.96 25.43 1.81 34.34-4.39 2.26-1.54 4.86-2.75 6.21-5.27 2.76-4.59 1.13-11.06-3.59-13.68ZM925.4 23.77c37.64 1.4 153.99 10.85 196.64 14.94 45.95 5.51 91.89 11.03 137.76 17.19 24.25 4.77 74.13 11.21 101.72 18.14-11.87-1.15-23.77-1.97-35.65-3.06-133.46-15.9-266.8-33.02-400.47-47.21Z"></path></svg>')
-			no-repeat;
-    height: 27px;
-    position: absolute;
-    bottom: 5px;
-    rotate: -4deg;
-    z-index: -1;
-	}
-
-	#experiencia, #proyectos {
-		padding-bottom: 3rem;
-	}
-
-	#proyectos > section {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 2rem;
-	}
-
-	#footer {
-		background: rgba(0, 0, 0, .05);
-		padding: 1rem 2rem;
-		border-radius: .75rem;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-
-	#footer ul {
-		display: flex;
-		gap: 1rem;
-		list-style: none;
-	}
-
-	#footer ul a {
-		color: hsl(var(--text-color));
-		text-decoration: none;
-		padding: .125rem .25rem;
-		border-radius: .25rem;
-		transition: background .15s linear;
-	}
-
-	#footer ul a:hover {
-		text-decoration: underline;
-		background: rgba(0, 0, 0, .05);
-	}
-
-@media screen and (max-width: 1440px) {
-	main {
-		width: 100%;
-	}
-}
-
-@media screen and (max-width: 950px) {
-	#hero img {
-		width: 7rem;
-	}
-
-	#hero section:first-of-type {
-		align-items: flex-start;
-    gap: 0;
-	}
-}
-
-@media screen and (max-width: 860px) {
-	#proyectos > section {
-		grid-template-columns: 1fr;
-	}
-}
-
-@media screen and (max-width: 650px) {
-	:root {
-		font-size: 14px;
-	}
-
-	#footer {
-		margin-bottom: 5rem;
-	}
-}
-
-@media screen and (max-width: 500px) {
-	h1 {
-		font-size: 3rem;
-	}
-}
-</style>
+<meta http-equiv="refresh" content="0;url=/es/" />
