GoUp button, translations expanded, SEO implemented and minor fixes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,13 +18,13 @@ const t = useTranslations(lang);
       <li>
         <a href="#experiencia">
           <WorkingIcon />
-          Experiencia
+          { t("navbar").experience }
         </a>
       </li>
       <li>
         <a href="#proyectos">
           <ProjectsIcon />
-          Proyectos
+          { t("navbar").projects }
         </a>
       </li>
       <!-- <li>
@@ -36,7 +36,7 @@ const t = useTranslations(lang);
       <li>
         <a href="#contacto">
           <ContactIcon />
-          Contacto
+          { t("navbar").contact }
         </a>
       </li>
       <li>
