added i18n to footer and fixed typo errors

--- a/src/components/Pages/IndexPage.astro
+++ b/src/components/Pages/IndexPage.astro
@@ -86,7 +86,7 @@ const t = useTranslations(lang);
 		</section>
 
 		<footer id="footer">
-			<p>Porfolio hecho con Astro y Svelte.</p>
+			<p>{ t("footer").text }</p>
 			<ul>
 				<li>
 					<a href="https://www.linkedin.com/in/pol-cort%C3%A9s-757b69285/" target="_blank" rel="noopener noreferrer">Linkedin</a>
